--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: clickhouse_jdbc.taco
-          path: packaged-connector/clickhouse_jdbc*.taco
+          path: connector_packager/packaged-connector/clickhouse_jdbc*.taco
+          if-no-files-found: error
