--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'zulu'
+          distribution: 'oracle'
 
       - name: Prepare for signing 
         working-directory: clickhouse-tableau-jdbc/signing_utility
