Fix signing tool

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Prepare for signing 
         working-directory: clickhouse-tableau-jdbc/signing_utility
         run: | 
-          cp ./smpkcs11.dylib /tmp/smpkcs11.dylib
+          cp ./smpkcs11.so /tmp/smpkcs11.so
           echo "${{ secrets.SM_CLIENT_CERT_FILE_B64 }}" | base64 --decode > /tmp/Certificate_pkcs12.p12 
           echo "SM_HOST=${{ secrets.SM_HOST }}" >> "$GITHUB_ENV" 
           echo "SM_API_KEY=${{ secrets.SM_API_KEY }}" >> "$GITHUB_ENV" 
